src/test/testData/kubernetes/KUBE002/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
    name: test
spec:
      containers:
      - image: nginx:latest
        name: test
      - name : test2
        image : nginx
        securityContext:
          capabilities: 
            add: [<error descr="Container requests insecure Linux capabilities. Left only necessary.">"SETPCAP"</error>, <error descr="Container requests insecure Linux capabilities. Left only necessary.">"MAC_OVERRIDE"</error>]